<resources>
    <string name="app_name">/NALO</string>
    <string name="register">Clicca qui per Registrarti</string>
    <string name="pswdimenticata">Hai dimenticato la Password?</string>

    <string name="username">username</string>
    <string name="password">password</string>

    <string name="volontario">Pagina Volonatario</string>
    <string name="dettagli">Dettagli</string>

    <string name="disagiato">Pagina Disagiato</string>

    <string name="assistenza">Assistenza</string>
    <string name="malori">Malore</string>
    <string name="medicinali">Medicinali</string>
    <string name="spesa">Spesa</string>

    <string name="messaggio">Messaggio</string>

    <string name="disagio">Tipo di Disagio : </string>
    <string name="nome_disagiato">Disagiato : </string>
    <string name="posizione">Luogo : </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- scrivere le stringhe delle edit text della pagina registrazine -->

    <string name="nome">nome</string>
    <string name="cognome">cognome</string>
    <string name="indirizzo">indirizzo</string>
    <string name="qualifica">qualifica</string>
    <string name="email">e-mail</string>

</resources>
